<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="10dp">

    <!--1-->
    <TextView
        android:id="@+id/textView_main_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/a1"
        android:textColor="@color/colorPrimary"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--2-->
    <TextView
        android:id="@+id/textView_main_item_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/a4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_main_item_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_main_item_3" />

    <!--3-->
    <TextView
        android:id="@+id/textView_main_item_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a3"
        android:textSize="8pt"
        android:textStyle="bold"
        android:maxLength="2"
        app:layout_constraintBottom_toBottomOf="@+id/textView_main_item_4"
        app:layout_constraintEnd_toStartOf="@+id/textView_main_item_4"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_main_item_4" />

    <!--4-->
    <TextView
        android:id="@+id/textView_main_item_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/a2"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_main_item_1" />

    <!--5-->
    <TextView
        android:id="@+id/textView_main_item_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a3"
        android:textSize="8pt"
        android:maxLength="2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView_main_item_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/textView_main_item_4"
        app:layout_constraintTop_toTopOf="@+id/textView_main_item_4" />

    <!--6-->
    <TextView
        android:id="@+id/textView_main_item_6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/a4"
        app:layout_constraintBottom_toBottomOf="@+id/textView_main_item_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_main_item_5"
        app:layout_constraintTop_toTopOf="@+id/textView_main_item_5" />
</androidx.constraintlayout.widget.ConstraintLayout>